do.css
/* Define global styles and variables */
:root {
  --theme: #075;
  --c: var(--theme);
  --bg: #fff;
  --bg2: color-mix(in srgb-linear, var(--bg), #777 8%);
  --gray: color-mix(in srgb-linear, var(--bg), #777 20%);
  --fg: #111;
  --w: 720px;
  background-color: var(--bg);
  color: var(--fg);
  font-size: 125%;
  line-height: 1.6;
}

/* Define dark mode */
@media (prefers-color-scheme: dark) {
  :root {
    --c: color-mix(in oklch, var(--theme), #fff 40%);
    --bg: #000;
    --fg: #eee;
  }
}

/* Resets */
body,
header * {
  margin: 0;
  padding: 0;
}

figure,
blockquote,
fieldset {
  margin-inline: 0;
  border: 0;
}

/* Size and center 1st-level elements */
body > * {
  max-width: var(--w);
  font-family: sans-serif;
  padding: 0.5em calc(max(1em, 50vw - var(--w) / 2));
}

/* Display nav items horizontally */
nav {
  display: flex;
  flex-wrap: wrap;
  gap: 1em;
}

nav button {
  width: revert;
}

menu > * {
  display: inline;
}

/* Bold elements as appropriate and apply theme color to text */
h1,
h2,
h3,
th,
legend,
caption {
  font-weight: 800;
  color: var(--c);
  border-bottom: 2px solid var(--gray);
}

/* Color links */
:any-link {
  color: var(--c);
}

/* Ensure the images fit width and maintain aspect ratio */
img {
  max-width: 100%;
  height: auto;
}

/* Apply left edge to code and blockquotes */
blockquote,
pre {
  border-left: 5px solid var(--c);
  padding: 1em;
  background: var(--bg2);
  border-radius: 0 1em 1em 0;
}

/* Set form control shape and shadow */
button,
input,
textarea,
select {
  border: 0;
  border-radius: 8px;
  padding: 0.5em 1em;
  box-shadow: 0 0 8px #999;
  color: var(--fg);
  background-color: var(--bg);
}

/* Set button color */
button,
[type='submit'],
[type='button'] {
  background: var(--c);
  color: var(--bg);
}

/* Stretch most form controls to full width */
label,
input,
button,
select,
textarea {
  width: 100%;
  box-sizing: border-box;
  margin: 0.5em 0;
  font-size: 1rem;
  font-family: inherit; /* For textareas */
}

/* Display small form controls inline with their labels */
[type='radio'],
[type='checkbox'] {
  display: inline;
  width: revert;
}

table,
figure {
  /* Remove gap between cell borders */
  border-spacing: 0;
  /* Stretch tables to max width */
  width: 100%;
}

/* Allow large tables and code blocks to scroll */
figure,
pre {
  overflow: scroll;
}

/* Apply uniform padding and alignment to table elements */
th,
td,
figcaption,
caption {
  padding: 0.5em 2em 0.5em 0;
  text-align: left;
}

